Se enlazan las 2 paginas al index.html
Fin del proyecto.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <img src="img/Banner1.png" alt="imagen1">
         </section> 
         <nav>
-            <a href="https://www.youtube.com/watch?v=qGwEg7px2ko">Ver Comparación en Video Juegos</a>
+            <a href="pagina1.html">Ver Comparación en Video Juegos</a>
             <hr>
-            <a href="https://www.youtube.com/watch?v=GSY6WGmhV1U">Ver Comparación en Render</a>
+            <a href="pagina2.html">Ver Comparación en Render</a>
             <hr>
         </nav> 
            <section>
